<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".WifiSignalReaderActivity">

    <TextView
        android:id="@+id/tvWifiAPName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wifi_access_point" />

    <TextView
        android:id="@+id/tvRSSIStrength"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvWifiAPName"
        android:text="@string/wifi_rssi_strength" />

    <TextView
        android:id="@+id/tvBeaconRSSIStrength"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvRSSIStrength"
        android:layout_marginTop="30dp"
        android:text="@string/beacon_rssi_strength" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_start_record_rssi_values"
        android:id="@+id/buttonStartRecordRssiValues"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/tvBeaconRSSIStrength"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_stop_record_save_rssi_values"
        android:id="@+id/buttonStopRecordRssiValues"
        android:layout_alignTop="@+id/buttonStartRecordRssiValues"
        android:layout_toEndOf="@+id/buttonStartRecordRssiValues" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/tv_save_counter"
        android:id="@+id/textViewSavedCounter"
        android:layout_below="@+id/buttonStartRecordRssiValues"
        android:layout_marginTop="10dp"
        android:textSize="30dp"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="12dp"
        android:id="@+id/textViewStatisticsInformation"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true" />


</RelativeLayout>
