<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/dialog_point_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/dialog_point_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dialog_fingerprint_button_cancel" />

            <Button
                android:id="@+id/dialog_point_ok"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dialog_fingerprint_button_ok" />
            
            <Button
                android:id="@+id/dialog_point_unreachable" 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dialog_fingerprint_button_set_unreachable"/>
        </LinearLayout>
    </LinearLayout>

</ScrollView>